--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -19,12 +19,33 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="{{ url_for('index') }}">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Title</a>
-        </li>
+
+        {% if title == 'Home' %}
+          <li class="nav-item active">
+            <a class="nav-link" href="{{ url_for('index') }}">Home <span class="sr-only">(current)</span></a>
+          </li>
+        {% else %}
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('index') }}">Home</a>
+          </li>
+        {% endif %}
+
+        {% if title == 'Change Title' %}
+          <li class="nav-item active">
+        {% else %}
+          <li class="nav-item">
+        {% endif %}
+            <a class="nav-link" href="{{ url_for('title') }}">Title</a>
+          </li>
+
+        {% if title == 'Login' %}
+          <li class="nav-item active">
+        {% else %}
+          <li class="nav-item">
+        {% endif %}
+            <a class="nav-link" href="{{ url_for('login') }}">Login</a>
+          </li>
+
       </ul>
     </div>
   </nav>
