--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -46,6 +46,14 @@
             <a class="nav-link" href="{{ url_for('login') }}">Login</a>
           </li>
 
+          {% if title == 'Register' %}
+            <li class="nav-item active">
+          {% else %}
+            <li class="nav-item">
+          {% endif %}
+              <a class="nav-link" href="{{ url_for('register') }}">Register</a>
+            </li>
+
       </ul>
     </div>
   </nav>
