Added db, TODO: setup other form data tables

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -42,6 +42,12 @@ body {
   width: 80%;
 }
 
+.error {
+  color: red;
+  font-weight: bold;
+  font-size: 85%;
+}
+
 footer {
   background-color: #343a40!important;
 }
