--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -46,21 +46,21 @@
             <a class="nav-link" href="{{ url_for('login') }}">Login</a>
           </li>
 
-          {% if title == 'Register' %}
-            <li class="nav-item active">
-          {% else %}
-            <li class="nav-item">
-          {% endif %}
-              <a class="nav-link" href="{{ url_for('register') }}">Register</a>
-            </li>
+        {% if title == 'Register' %}
+          <li class="nav-item active">
+        {% else %}
+          <li class="nav-item">
+        {% endif %}
+            <a class="nav-link" href="{{ url_for('register') }}">Register</a>
+          </li>
 
-          {% if title == 'Contact' %}
-            <li class="nav-item active">
-          {% else %}
-            <li class="nav-item">
-          {% endif %}
-              <a class="nav-link" href="{{ url_for('contact') }}">Contact</a>
-            </li>
+        {% if title == 'Contact Us' %}
+          <li class="nav-item active">
+        {% else %}
+          <li class="nav-item">
+        {% endif %}
+            <a class="nav-link" href="{{ url_for('contact') }}">Contact</a>
+          </li>
 
       </ul>
     </div>
@@ -68,6 +68,17 @@
 {% endblock %}
 
 {% block content %}
+  <!-- show flash messages via an alert box -->
+  {% with messages = get_flashed_messages() %}
+    {% if messages %}
+      {% for m in messages %}
+        <script type="text/javascript">
+          alert('{{ m }}')
+        </script>
+      {% endfor %}
+    {% endif %}
+  {% endwith %}
+
   <!-- all template files will render withinblock app content -->
   {% block app_content %}{% endblock %}
 
