--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -48,6 +48,28 @@ body {
   font-size: 85%;
 }
 
+.pic {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  width: 50px;
+  height: 50px;
+}
+
+.date {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-style: italic;
+}
+
+.tweet>p {
+  font-size: 140%;
+  font-weight: bold;
+  margin-top: 70px;
+  margin-bottom:  10px;
+}
+
 footer {
   background-color: #343a40!important;
 }
