--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -38,30 +38,45 @@
             <a class="nav-link" href="{{ url_for('title') }}">Title</a>
           </li>
 
-        {% if title == 'Login' %}
-          <li class="nav-item active">
-        {% else %}
-          <li class="nav-item">
-        {% endif %}
-            <a class="nav-link" href="{{ url_for('login') }}">Login</a>
-          </li>
+        {% if not current_user.is_authenticated %}
+          {% if title == 'Login' %}
+            <li class="nav-item active">
+          {% else %}
+            <li class="nav-item">
+          {% endif %}
+              <a class="nav-link" href="{{ url_for('login') }}">Login</a>
+            </li>
 
-        {% if title == 'Register' %}
-          <li class="nav-item active">
+          {% if title == 'Register' %}
+            <li class="nav-item active">
+          {% else %}
+            <li class="nav-item">
+          {% endif %}
+              <a class="nav-link" href="{{ url_for('register') }}">Register</a>
+            </li>
+
         {% else %}
+
+          {% if title == 'Profile' %}
+            <li class="nav-item active">
+          {% else %}
+            <li class="nav-item">
+          {% endif %}
+              <a class="nav-link" href="{{ url_for('profile', username=current_user.username) }}">Profile</a>
+            </li>
+
           <li class="nav-item">
-        {% endif %}
-            <a class="nav-link" href="{{ url_for('register') }}">Register</a>
+            <a class="nav-link" href="{{ url_for('logout') }}">Log Out</a>
           </li>
+        {% endif %}
 
         {% if title == 'Contact Us' %}
-          <li class="nav-item active">
-        {% else %}
+        <li class="nav-item active">
+          {% else %}
           <li class="nav-item">
-        {% endif %}
+            {% endif %}
             <a class="nav-link" href="{{ url_for('contact') }}">Contact</a>
           </li>
-
       </ul>
     </div>
   </nav>
