--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -7,11 +7,11 @@
       <div class="row">
         <div class="col-md-4">
           <div class="card">
-            <img src="http://placehold.it/250x250" alt="PlaceholderImage" class="card-img">
-            <div class="card-title">@username</div>
-            <div class="card-subtitle">John Smith</div>
+            <img src="{{ user.url }}" alt="PlaceholderImage" class="card-img">
+            <div class="card-title">@{{ user.username }}</div>
+            <div class="card-subtitle">{{ user.first_name }} {{ user.last_name }}</div>
             <div class="card-text">
-              <p>This is a bio for John Smith. There are some descriptive words describing his descriptiveness</p>
+              <p>{{ user.bio }}</p>
             </div>
             <button class="btn btn-primary">Follow</button>
           </div>
@@ -23,7 +23,7 @@
           </div> <!-- ends card for form -->
 
             <!-- TODO: loop over this card for tweets -->
-            {% for post in posts[::-1] %}
+            {% for post in user.posts[::-1] %}
               <div class="card">
                 <img src="http://placehold.it/50x50" alt="Profile Pic" class="pic">
                 <div class="date">{{ post.date_posted }}</div>
