--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -17,10 +17,13 @@
           </div>
         </div> <!-- ends col 4 -->
         <div class="col-md-8">
-          <div class="card">
-            <!-- TODO: add form -->
-            {{ wtf.quick_form(form) }}
-          </div> <!-- ends card for form -->
+          <!-- only show form if current logged in user is user's profile -->
+          {% if current_user.username == username %}
+            <div class="card">
+              <!-- TODO: add form -->
+              {{ wtf.quick_form(form) }}
+            </div> <!-- ends card for form -->
+          {% endif %}
 
             <!-- TODO: loop over this card for tweets -->
             {% for post in user.posts[::-1] %}
