--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -38,6 +38,14 @@
             <a class="nav-link" href="{{ url_for('title') }}">Title</a>
           </li>
 
+        {% if title == 'Checkout' %}
+          <li class="nav-item active">
+        {% else %}
+          <li class="nav-item">
+        {% endif %}
+            <a class="nav-link" href="{{ url_for('checkout') }}">Checkout</a>
+          </li>
+
         {% if not current_user.is_authenticated %}
           {% if title == 'Login' %}
             <li class="nav-item active">
