--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -18,7 +18,7 @@
         </div> <!-- ends col 4 -->
         <div class="col-md-8">
           <!-- only show form if current logged in user is user's profile -->
-          {% if current_user.username == username %}
+          {% if current_user.username == user.username %}
             <div class="card">
               <!-- TODO: add form -->
               {{ wtf.quick_form(form) }}
